--- a/style.css
+++ b/style.css
@@ -1,66 +1,47 @@
-/*"the *" *{adds to all of the webpage
-    color:green;
-}*/
-/* an id (identifying one element) and class(several elements) are different*/
-/*
-body{
-    background-color: rgba(255, 188, 244, 0.488);
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}*/
-h1 {
-    color: rgb(2, 128, 0);
-    margin-right: 20px;
-  }
-/*h3 {
-    color:rgba(52, 182, 132, 0.658)
-}
- ID selector*/
-/*#headline{
-    font-size: 50px;s
-    color: green;
-}*/
-/*Class selector*/
-.underline{
-   font-variant: small-caps;
-}
-/*TYPE SELECTOR (this one is changing p tag)*/
-p {
-    /*color: blueviolet;*/
-    color:rgb(95, 192, 95);
-}
-/*img float
-img{
-    float:right;
-}*/
-/*all of the p elements on the main portion will be this..*/
-main p {
-    color: rgb(169, 4, 4);
-    font-family: fantasy;
-    font-size: larger;
-  }
-header p {
-    font-size: larger;
-    font-stretch: ultra-expanded;
-    text-align: center;
-}
-
-
-/*********/
-  body {
-    font-family: 'Comic Sans MS', cursive, sans-serif;
-    background: linear-gradient(to bottom, #fff0f5, #ffe4e1);
-    color: #333;
+/* Background gradient and general font */
+body {
+    font-family: 'Verdana', sans-serif;
     margin: 0;
-    padding: 0;
+    background: linear-gradient(to bottom right, #fff0f5, #ffe6f0);
+    color: #4b004b;
+    line-height: 1.6;
 }
 
-h1,h2 {
+/* Header section */
+header {
     text-align: center;
-    color: #d6336c;
-    font-weight: bolder;
+    background-color: #ffebf0;
+    padding-bottom: 20px;
 }
 
-nav p.underline {
-    font-weight: bold;
-    color: #f06292;
+#headline {
+    margin: 10px;
+    font-size: 2.5em;
+    color: #d63384;
 }
+
+/* Navigation styling */
+nav {
+    background-color: #ffe6f0;
+    padding: 10px;
+    border-top: 3px solid #ff99cc;
+    border-bottom: 3px solid #ff99cc;
+}
+
+nav .underline {
+    text-decoration: #4b004b;
+}
+
+/* Footer */
+footer {
+    text-align: center;
+    background-color: #ffe4e1;
+    padding: 10px;
+    margin-top: 30px;
+    font-size: 0.9em;
+    border-top: 2px solid #ffb6c1;
+}
+a:hover{
+    background-color: rgb(250, 207, 246);
+    font-size: larger;
+  }
